@@ -1,18 +1,18 @@
 package com.anipick.backend.anime.service;
 
+import com.anipick.backend.anime.domain.*;
 import com.anipick.backend.anime.dto.*;
-import com.anipick.backend.anime.domain.RangeDate;
-import com.anipick.backend.anime.domain.Season;
-import com.anipick.backend.anime.domain.SeasonConverter;
 import com.anipick.backend.anime.mapper.AnimeMapper;
 
 import com.anipick.backend.anime.mapper.GenreMapper;
 import com.anipick.backend.anime.mapper.StudioMapper;
 import com.anipick.backend.anime.util.FormatConvert;
+import com.anipick.backend.common.util.LocalizationUtil;
 import com.anipick.backend.common.domain.SortOption;
 import com.anipick.backend.common.dto.CursorDto;
 import com.anipick.backend.anime.dto.AnimeDetailInfoReviewsPageDto;
 import com.anipick.backend.anime.dto.AnimeDetailInfoReviewsRequestDto;
+import com.anipick.backend.image.domain.ImageDefaults;
 import com.anipick.backend.search.dto.StudioItemDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -27,7 +27,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -61,13 +60,15 @@ public class AnimeService {
 			.endDate(endDate)
 			.build();
 
-		List<AnimeIdTitleImgItemDto> nextSeasonAnimes =
-			mapper.selectUpcomingSeasonAnimes(rangeDateRequestDto);
+		List<AnimeItemDto> nextSeasonAnimes = mapper.selectUpcomingSeasonAnimes(rangeDateRequestDto)
+				.stream()
+				.map(AnimeItemDto::animeTitleTranslationPick)
+				.collect(Collectors.toList());
 
 		Collections.shuffle(nextSeasonAnimes);
 
 		if (nextSeasonAnimes.size() > 10) {
-			List<AnimeIdTitleImgItemDto> animes10SubList = nextSeasonAnimes.subList(0, 10);
+			List<AnimeItemDto> animes10SubList = nextSeasonAnimes.subList(0, 10);
 			return UpcomingSeasonResultDto.of(season, seasonYear, animes10SubList);
 		}
 		return UpcomingSeasonResultDto.of(season, seasonYear, nextSeasonAnimes);
@@ -100,12 +101,11 @@ public class AnimeService {
 
 	private ComingSoonPageDto getSortLatestComingSoonAnimes(String sort, ComingSoonRequestDto comingSoonRequestDto, long totalCount) {
 		List<ComingSoonItemBasicDto> latestSortAnimes =
-				mapper.selectComingSoonLatestAnimes(comingSoonRequestDto);
-		List<ComingSoonItemBasicDto> imgFilterItems = latestSortAnimes.stream()
-				.map(ComingSoonItemBasicDto::typeToReleaseDate)
-				.collect(Collectors.toList());
+				mapper.selectComingSoonLatestAnimes(comingSoonRequestDto).stream()
+						.map(ComingSoonItemBasicDto::animeTitleTranslationPick)
+						.toList();
 
-		List<ComingSoonItemDto> items = imgFilterItems.stream()
+		List<ComingSoonItemDto> items = latestSortAnimes.stream()
 				.map(b -> new ComingSoonItemDto(
 						b.getAnimeId(),
 						b.getTitle(),
@@ -129,20 +129,20 @@ public class AnimeService {
 
 	private ComingSoonPageDto getSortPopularityComingSoonAnimes(String sort, ComingSoonRequestDto comingSoonRequestDto, long totalCount) {
 		List<ComingSoonItemPopularityDto> popularitySortAnimes =
-				mapper.selectComingSoonPopularityAnimes(comingSoonRequestDto);
-		List<ComingSoonItemPopularityDto> imgFilterItems = popularitySortAnimes.stream()
-				.map(ComingSoonItemPopularityDto::typeToReleaseDate)
-				.collect(Collectors.toList());
+				mapper.selectComingSoonPopularityAnimes(comingSoonRequestDto)
+						.stream()
+						.map(ComingSoonItemPopularityDto::animeTitleTranslationPick)
+						.toList();
 
 		Long nextId;
 
-		if (imgFilterItems.isEmpty()) {
+		if (popularitySortAnimes.isEmpty()) {
 			nextId = null;
 		} else {
-			nextId = imgFilterItems.getLast().getPopularId();
+			nextId = popularitySortAnimes.getLast().getScore();
 		}
 
-		List<ComingSoonItemDto> items = imgFilterItems.stream()
+		List<ComingSoonItemDto> items = popularitySortAnimes.stream()
 				.map(b -> new ComingSoonItemDto(
 						b.getAnimeId(),
 						b.getTitle(),
@@ -157,21 +157,19 @@ public class AnimeService {
 	}
 
 	private ComingSoonPageDto getSortStartDateComingSoonAnimes(String sort, ComingSoonRequestDto comingSoonRequestDto, long totalCount) {
-		List<ComingSoonItemBasicDto> starDateSortAnimes =
+		List<ComingSoonItemAllTitleDto> starDateSortAnimes =
 				mapper.selectComingSoonStartDateAnimes(comingSoonRequestDto);
-		List<ComingSoonItemBasicDto> imgFilterItems = starDateSortAnimes.stream()
-				.collect(Collectors.toList());
 
 		String nextValue;
 
-		if (imgFilterItems.isEmpty()) {
+		if (starDateSortAnimes.isEmpty()) {
 			nextValue = null;
 		} else {
-			nextValue = imgFilterItems.getLast().getStartDate();
+			nextValue = starDateSortAnimes.getLast().getStartDate();
 		}
 
-		List<ComingSoonItemBasicDto> typeCovertAnimes = imgFilterItems.stream()
-				.map(ComingSoonItemBasicDto::typeToReleaseDate)
+		List<ComingSoonItemBasicDto> typeCovertAnimes = starDateSortAnimes.stream()
+				.map(ComingSoonItemBasicDto::animeTitleTranslationPick)
 				.collect(Collectors.toList());
 
 		List<ComingSoonItemDto> items = typeCovertAnimes.stream()
@@ -189,18 +187,18 @@ public class AnimeService {
 		if (starDateSortAnimes.isEmpty()) {
 			nextId = null;
 		} else {
-			nextId = imgFilterItems.getLast().getAnimeId();
+			nextId = starDateSortAnimes.getLast().getAnimeId();
 		}
 		CursorDto cursor = CursorDto.of(sort, nextId, nextValue);
 		return ComingSoonPageDto.of(totalCount, cursor, items);
 	}
-  
-	public AnimeDetailInfoReviewsPageDto getAnimeInfoReviews(Long animeId, Long userId, String sort, Boolean isSpoiler, Long lastId, String lastValue, int size) {
+
+	public AnimeDetailInfoReviewsPageDto getAnimeInfoReviews(Long animeId, Long userId, String sort, Long lastId, String lastValue, int size) {
 		SortOption sortOption = SortOption.of(sort);
 		String orderByQuery = sortOption.getOrderByQuery();
 
 		AnimeDetailInfoReviewsRequestDto reviewsRequestDto =
-				AnimeDetailInfoReviewsRequestDto.of(animeId, userId, sort, orderByQuery, isSpoiler, lastId, lastValue, size);
+				AnimeDetailInfoReviewsRequestDto.of(animeId, userId, sort, orderByQuery, lastId, lastValue, size);
 
 		long totalCount = mapper.selectAnimeReviewCount(animeId);
 
@@ -211,10 +209,19 @@ public class AnimeService {
 					LocalDateTime dateTime = LocalDateTime.parse(dto.getCreatedAt(), parser);
 					String formattedDate = dateTime.format(formatter);
 
+					String imageIdStr = dto.getProfileImageUrl();
+					if (imageIdStr == null) {
+						imageIdStr = "-1";
+					}
+					Long imageId = Long.parseLong(imageIdStr);
+
+					String imageUrlEndpoint = getImageUrlEndpoint(imageId);
+
 					return AnimeDetailInfoReviewsResultDto.of(
 							dto.getReviewId(),
+							dto.getUserId(),
 							dto.getNickname(),
-							dto.getProfileImageUrl(),
+							imageUrlEndpoint,
 							dto.getRating(),
 							dto.getContent(),
 							formattedDate,
@@ -330,7 +337,7 @@ public class AnimeService {
 
 		return AnimeDetailInfoReviewsPageDto.of(totalCount, cursor, items);
   }
-  
+
 	@Transactional(readOnly = true)
 	public AnimeDetailInfoResultDto getAnimeInfoDetail(Long animeId, Long userId) {
 		AnimeDetailInfoItemDto animeDetailInfoItemDto = mapper.selectAnimeInfoDetail(animeId, userId);
@@ -344,39 +351,64 @@ public class AnimeService {
 			airDate = animeDetailInfoItemDto.getStartDate().getYear() + "년 " + season.getName();
 		}
 
+		Long episodeCount;
+		if (animeDetailInfoItemDto.getEpisode() == null) {
+			episodeCount = 0L;
+		} else {
+			episodeCount = animeDetailInfoItemDto.getEpisode();
+		}
+
 		String type = FormatConvert.toClientType(animeDetailInfoItemDto.getType());
 
 		List<GenreDto> genres = genreMapper.selectGenresByAnimeId(animeId);
 
-		List<StudioItemDto> studios = studioMapper.selectStudiosByAnimeId(animeId);
+		List<StudioItemDto> studios = studioMapper.selectStudiosByAnimeId(animeId)
+                .stream()
+                .map(StudioItemDto::studioNameTranslationPick)
+                .toList();
+
+		String pickTitle = LocalizationUtil.pickTitle(
+				animeDetailInfoItemDto.getTitleKor(),
+				animeDetailInfoItemDto.getTitleEng(),
+				animeDetailInfoItemDto.getTitleRom(),
+				animeDetailInfoItemDto.getTitleNat()
+		);
 
 		return AnimeDetailInfoResultDto.builder()
 				.animeId(animeDetailInfoItemDto.getAnimeId())
-				.title(animeDetailInfoItemDto.getTitle())
+				.title(pickTitle)
 				.coverImageUrl(animeDetailInfoItemDto.getCoverImageUrl())
 				.bannerImageUrl(animeDetailInfoItemDto.getBannerImageUrl())
 				.description(animeDetailInfoItemDto.getDescription())
-				.averageRating(animeDetailInfoItemDto.getAverageRating())
+				.averageRating(animeDetailInfoItemDto.getAverageRatingAsString())
 				.isLiked(animeDetailInfoItemDto.getIsLiked())
 				.watchStatus(animeDetailInfoItemDto.getWatchStatus())
 				.type(type)
 				.reviewCount(animeDetailInfoItemDto.getReviewCount())
 				.genres(genres)
-				.episode(animeDetailInfoItemDto.getEpisode())
+				.episode(episodeCount)
 				.airDate(airDate)
 				.status(animeDetailInfoItemDto.getStatus().getStatusName())
 				.age(animeDetailInfoItemDto.getAge())
 				.studios(studios)
 				.build();
   }
-  
+
 	public List<AnimeItemDto> getAnimeRecommendation(Long animeId) {
-		List<AnimeItemDto> items = mapper.selectAnimeInfoRecommendationsByAnimeId(animeId, ITEM_DEFAULT_SIZE);		
-    return items;
+		List<AnimeItemDto> items = mapper.selectAnimeInfoRecommendationsByAnimeId(animeId, ITEM_DEFAULT_SIZE)
+				.stream()
+				.map(AnimeItemDto::animeTitleTranslationPick)
+				.toList();
+    	return items;
 	}
-  
+
 	public List<AnimeSeriesItemResultDto> getAnimeSeries(Long animeId) {
-		List<AnimeDateItemDto> animeDateItemDtos = mapper.selectAnimeInfoSeriesByAnimeId(animeId, ITEM_DEFAULT_SIZE);
+		Long seriesGroupId = mapper.selectSeriesGroupIdByAnimeId(animeId);
+
+		List<AnimeDateItemDto> animeDateItemDtos = mapper.selectAnimeInfoSeriesByAnimeId(seriesGroupId, animeId, ITEM_DEFAULT_SIZE)
+				.stream()
+				.map(AnimeDateItemDto::animeTitleTranslationPick)
+				.toList();
 
 		List<AnimeSeriesItemResultDto> airDateConvertItems = animeDateItemDtos.stream()
 				.map(dto -> {
@@ -396,9 +428,189 @@ public class AnimeService {
 				.toList();
 		return airDateConvertItems;
   }
-  
-	public List<AnimeCharacterActorItemDto> getAnimeInfoCharacterActor(Long animeId) {
-		List<AnimeCharacterActorItemDto> items = mapper.selectAnimeInfoCharacterActors(animeId, ITEM_DEFAULT_SIZE);
+
+	public List<AnimeCharacterActorItemPickNameDto> getAnimeInfoCharacterActor(Long animeId) {
+		List<AnimeCharacterActorItemPickNameDto> items = mapper.selectAnimeInfoCharacterActors(animeId, ITEM_DEFAULT_SIZE)
+                .stream()
+                .map(item -> {
+                    String localizedCharacterName = LocalizationUtil.pickCharacterName(
+                            item.getCharacter().getNameKor(),
+                            item.getCharacter().getNameEng()
+                    );
+
+					VoiceActorDto voiceActor = item.getVoiceActor();
+					// 캐릭터만 있고, 성우만 존재하는 경우
+					if (voiceActor == null) {
+						return AnimeCharacterActorItemPickNameDto.of(
+							CharacterPickNameDto.from(
+								item.getCharacter().getId(),
+								localizedCharacterName,
+								item.getCharacter().getImageUrl()
+							),
+							VoiceActorPickNameDto.from(
+								null,
+								null,
+								null
+							)
+						);
+					}
+
+					String localizedVoiceActorName = LocalizationUtil.pickVoiceActorName(
+                            voiceActor.getNameKor(),
+							voiceActor.getNameEng()
+                    );
+
+                    return AnimeCharacterActorItemPickNameDto.of(
+                            CharacterPickNameDto.from(
+                                    item.getCharacter().getId(),
+                                    localizedCharacterName,
+                                    item.getCharacter().getImageUrl()
+                            ),
+                            VoiceActorPickNameDto.from(
+                                    item.getVoiceActor().getId(),
+                                    localizedVoiceActorName,
+                                    item.getVoiceActor().getImageUrl()
+                            )
+                    );
+                })
+                .toList();
 		return items;
+	}
+
+	public AnimeCharacterActorPageDto getAnimeCharacterActor(Long animeId, Long lastId, AnimeCharacterRole lastValue, int size) {
+        List<AnimeCharacterActorResultDto> items = mapper.selectAnimeCharacterActors(animeId, lastId, lastValue, size);
+
+        List<AnimeCharacterActorItemWithRoleDto> pickNameCharacterAndActors = items.stream()
+                .map(dto -> {
+					// 캐릭터만 있고, 성우만 존재하는 경우
+					if (dto.getVoiceActor() == null) {
+						return AnimeCharacterActorItemWithRoleDto.of(
+							CharacterPickNameDto.from(
+								dto.getCharacter().getId(),
+								LocalizationUtil.pickCharacterName(dto.getCharacter().getNameKor(),
+									dto.getCharacter().getNameEng()),
+								dto.getCharacter().getImageUrl()
+							),
+							VoiceActorPickNameDto.from(
+								null,
+								null,
+								null
+							),
+							dto.getRole()
+						);
+					}
+						return AnimeCharacterActorItemWithRoleDto.of(
+							CharacterPickNameDto.from(
+								dto.getCharacter().getId(),
+								LocalizationUtil.pickCharacterName(dto.getCharacter().getNameKor(),
+									dto.getCharacter().getNameEng()),
+								dto.getCharacter().getImageUrl()
+							),
+							VoiceActorPickNameDto.from(
+								dto.getVoiceActor().getId(),
+								LocalizationUtil.pickVoiceActorName(dto.getVoiceActor().getNameKor(),
+									dto.getVoiceActor().getNameEng()),
+								dto.getVoiceActor().getImageUrl()
+							),
+							dto.getRole()
+						);
+					}
+				)
+                .toList();
+
+        Long nextId;
+        AnimeCharacterRole nextValue;
+
+        if (pickNameCharacterAndActors.isEmpty()) {
+            nextId = null;
+            nextValue = null;
+        } else {
+            nextId = pickNameCharacterAndActors.getLast().getCharacter().getId();
+            nextValue = pickNameCharacterAndActors.getLast().getRole();
+        }
+
+        String nextValueStr;
+        if (nextValue == null) {
+            nextValueStr = null;
+        } else {
+            nextValueStr = nextValue.toString();
+        }
+
+        CursorDto cursor = CursorDto.of(null, nextId, nextValueStr);
+        return AnimeCharacterActorPageDto.of(cursor, pickNameCharacterAndActors);
+    }
+
+	public AnimeRecommendationPageDto getRecommendationsByAnime(Long animeId, Long lastId, int size) {
+		Anime anime = mapper.selectAnimeByAnimeId(animeId);
+
+		String animeTitle = anime.getTitlePick();
+
+		List<AnimeItemDto> items = mapper.selectRecommendationsByAnimeId(animeId, lastId, size)
+				.stream()
+				.map(AnimeItemDto::animeTitleTranslationPick)
+				.toList();
+
+		Long nextId;
+		if (items.isEmpty()) {
+			nextId = null;
+		} else {
+			nextId = items.getLast().getAnimeId();
+		}
+		CursorDto cursor = CursorDto.of(nextId);
+		return AnimeRecommendationPageDto.of(animeTitle, cursor, items);
+	}
+
+	public AnimeSeriesPageDto getSeriesByAnime(Long animeId, Long lastId, int size) {
+		Long seriesGroupId = mapper.selectSeriesGroupIdByAnimeId(animeId);
+
+		long totalCount = mapper.countSeriesAnime(seriesGroupId, animeId);
+
+		List<AnimeDateItemDto> items = mapper.selectSeriesByAnimeId(seriesGroupId, animeId, lastId, size)
+				.stream()
+				.map(AnimeDateItemDto::animeTitleTranslationPick)
+				.toList();
+		List<AnimeSeriesItemResultDto> airDateConvertItems = items.stream()
+				.map(dto -> {
+					LocalDate date = dto.getStartDate();
+					Season season = Season.containsSeason(date);
+					String seasonName = season.getName();
+
+					String resultAirDate = date.getYear() + "년 " + seasonName;
+
+					return AnimeSeriesItemResultDto.of(
+							dto.getAnimeId(),
+							dto.getTitle(),
+							dto.getCoverImageUrl(),
+							resultAirDate
+					);
+				})
+				.toList();
+
+		Long nextId;
+		if (items.isEmpty()) {
+			nextId = null;
+		} else {
+			nextId = items.getLast().getAnimeId();
+		}
+
+		CursorDto cursor = CursorDto.of(nextId);
+
+		return AnimeSeriesPageDto.of(totalCount, cursor, airDateConvertItems);
+	}
+
+	public AnimeMyReviewResultDto getAnimeMyReview(Long animeId, Long userId) {
+		AnimeMyReviewResultDto result = mapper.selectAnimeMyReview(animeId, userId);
+		if (result == null) {
+			return AnimeMyReviewResultDto.empty();
+		}
+		String reviewCreatedAt = result.getCreatedAt();
+		LocalDateTime dateTime = LocalDateTime.parse(reviewCreatedAt, parser);
+
+		String formattedDate = dateTime.format(formatter);
+		return AnimeMyReviewResultDto.createdAtFormatted(result, formattedDate);
+	}
+
+	public String getImageUrlEndpoint(Long imageId) {
+		return ImageDefaults.IMAGE_ENDPOINT + imageId;
 	}
 }
